[gd_scene load_steps=38 format=3 uid="uid://k5ymjlmc0akl"]

[ext_resource type="Script" path="res://MainMenu/TestScene.gd" id="1_ljpw3"]
[ext_resource type="Texture2D" uid="uid://ckanr87sjka43" path="res://Sprites/Screen.png" id="2_imyhn"]
[ext_resource type="AudioStream" uid="uid://dmxxmopmcjol4" path="res://audio/SFX/Bell1.wav" id="3_rbxi6"]
[ext_resource type="AudioStream" uid="uid://blhub386srghi" path="res://audio/SFX/Bell2.wav" id="4_cq6mp"]
[ext_resource type="AudioStream" uid="uid://dn8n66wg07hky" path="res://audio/SFX/Bell3.wav" id="5_g5jla"]
[ext_resource type="AudioStream" uid="uid://8i6ni2nhcox0" path="res://audio/SFX/Bell4.wav" id="6_5bot6"]
[ext_resource type="AudioStream" uid="uid://dw4rjjsbi84h" path="res://audio/SFX/Bell5.wav" id="7_7qiw6"]
[ext_resource type="AudioStream" uid="uid://bgpyn74kp8re" path="res://audio/SFX/Bell6.wav" id="8_0bmwk"]
[ext_resource type="AudioStream" uid="uid://bm6tue5db307k" path="res://audio/SFX/Bell7.wav" id="9_1bxjc"]
[ext_resource type="AudioStream" uid="uid://blmskn7grjwy7" path="res://audio/SFX/Bell8.wav" id="10_do3ea"]
[ext_resource type="AudioStream" uid="uid://cqn2i13rraumd" path="res://audio/SFX/Bell10.wav" id="11_pdcca"]
[ext_resource type="Script" path="res://MainMenu/PlayBackControl.gd" id="12_5onk2"]
[ext_resource type="AudioStream" uid="uid://bk63hiddgbyfa" path="res://audio/SFX/Bell11.wav" id="12_o756q"]
[ext_resource type="AudioStream" uid="uid://c5qqgaf3nmaia" path="res://audio/SFX/Bell12.wav" id="13_cta8u"]
[ext_resource type="AudioStream" uid="uid://47gacqywmka7" path="res://audio/SFX/Bell13.wav" id="14_ayngh"]
[ext_resource type="AudioStream" uid="uid://c0tarmw7oiff" path="res://audio/SFX/Bell14.wav" id="15_cjxi7"]
[ext_resource type="AudioStream" uid="uid://bc0rpdo36l6yl" path="res://audio/SFX/Bell15.wav" id="16_q3p1i"]
[ext_resource type="AudioStream" uid="uid://yhwnugn5pnxg" path="res://audio/SFX/Bell16.wav" id="17_uvc2u"]
[ext_resource type="Texture2D" uid="uid://dl41706rwxsf2" path="res://Sprites/Bell1.png" id="18_rka3f"]
[ext_resource type="Texture2D" uid="uid://cmu7k8rrjwc7r" path="res://Sprites/Bell2.png" id="19_ihe3v"]
[ext_resource type="Texture2D" uid="uid://5txtukphw52w" path="res://Sprites/Bell3.png" id="19_yfuda"]
[ext_resource type="Texture2D" uid="uid://bds5cdiia1kl4" path="res://Sprites/orb.png" id="20_dnk24"]
[ext_resource type="Texture2D" uid="uid://og4ax13j1jpl" path="res://Sprites/Bell4.png" id="20_fgy4o"]
[ext_resource type="Script" path="res://MainMenu/Orb.gd" id="21_78rgd"]
[ext_resource type="Texture2D" uid="uid://8w85rdejhdsc" path="res://Sprites/Bell5.png" id="21_unw0q"]
[ext_resource type="Texture2D" uid="uid://drg2xhdkbb5gm" path="res://Sprites/Bell6.png" id="22_1hxca"]
[ext_resource type="Texture2D" uid="uid://b3pjoxj1fjusi" path="res://Sprites/Bell7.png" id="23_6mdl5"]
[ext_resource type="Texture2D" uid="uid://cj6lppghdir5m" path="res://Sprites/Bell8.png" id="24_r6in4"]
[ext_resource type="Texture2D" uid="uid://bv80wtbb6us6v" path="res://Sprites/Bell9.png" id="25_52r3l"]
[ext_resource type="Texture2D" uid="uid://dqukglwdf0hyg" path="res://Sprites/Bell10.png" id="26_57qwq"]
[ext_resource type="Texture2D" uid="uid://dav5h14wwxuip" path="res://Sprites/Bell11.png" id="27_ss8hs"]
[ext_resource type="Texture2D" uid="uid://7vwqrqds0jxa" path="res://Sprites/Bell12.png" id="28_qvrxd"]
[ext_resource type="Texture2D" uid="uid://ddvpuen7r3c4t" path="res://Sprites/Bell13.png" id="29_xho67"]
[ext_resource type="Texture2D" uid="uid://bafvy6qvslnl7" path="res://Sprites/Bell14.png" id="30_yg4sf"]
[ext_resource type="Texture2D" uid="uid://b40uf6i61wifl" path="res://Sprites/Bell15.png" id="31_i6amn"]
[ext_resource type="Script" path="res://MainMenu/UI Control.gd" id="36_3oi5s"]
[ext_resource type="AudioStream" uid="uid://cabcvrbl1jxsw" path="res://audio/Music/Level10.wav" id="36_ip26k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljpw3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_imyhn")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.327257
anchor_top = 0.114568
anchor_right = 0.664063
anchor_bottom = 0.54784
offset_left = -282.0
offset_top = -0.24
offset_right = 282.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button1" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("18_rka3f")

[node name="Button2" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("19_ihe3v")

[node name="Button3" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("19_yfuda")

[node name="Button4" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("20_fgy4o")

[node name="Button5" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("21_unw0q")

[node name="Button6" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("22_1hxca")

[node name="Button7" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
texture_normal = ExtResource("23_6mdl5")

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button8" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("24_r6in4")

[node name="Button9" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("25_52r3l")

[node name="Button10" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("26_57qwq")

[node name="Button11" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("27_ss8hs")

[node name="Button12" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("28_qvrxd")

[node name="Button13" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("29_xho67")

[node name="Button14" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("30_yg4sf")

[node name="Button15" type="TextureButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("31_i6amn")

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rbxi6")
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cq6mp")
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g5jla")
bus = &"SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5bot6")
bus = &"SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7qiw6")
bus = &"SFX"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0bmwk")
bus = &"SFX"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1bxjc")
bus = &"SFX"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_do3ea")
bus = &"SFX"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_pdcca")
bus = &"SFX"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_o756q")
bus = &"SFX"

[node name="AudioStreamPlayer11" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_cta8u")
bus = &"SFX"

[node name="AudioStreamPlayer12" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ayngh")
bus = &"SFX"

[node name="AudioStreamPlayer13" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_cjxi7")
bus = &"SFX"

[node name="AudioStreamPlayer14" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_q3p1i")
bus = &"SFX"

[node name="AudioStreamPlayer15" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_uvc2u")
bus = &"SFX"

[node name="Orb" type="Sprite2D" parent="."]
position = Vector2(574, 550)
scale = Vector2(0.107422, 0.107422)
texture = ExtResource("20_dnk24")
script = ExtResource("21_78rgd")

[node name="PlayBackControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_5onk2")

[node name="RecordButton" type="Button" parent="PlayBackControl"]
layout_mode = 0
offset_left = 152.0
offset_top = 464.0
offset_right = 224.0
offset_bottom = 516.0
text = "Record"

[node name="PlayButton" type="Button" parent="PlayBackControl"]
layout_mode = 0
offset_left = 872.0
offset_top = 474.0
offset_right = 943.0
offset_bottom = 526.0
text = "Play"

[node name="PlayBackPlayer" type="AudioStreamPlayer" parent="PlayBackControl"]

[node name="UI Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -333.0
offset_top = 44.0
offset_right = -293.0
offset_bottom = 84.0
script = ExtResource("36_3oi5s")

[node name="Button" type="Button" parent="UI Control"]
layout_mode = 0
offset_left = 352.0
offset_top = 489.0
offset_right = 417.0
offset_bottom = 553.0
text = "Synth
"

[node name="Frequency" type="VSlider" parent="UI Control"]
layout_mode = 0
offset_left = 460.0
offset_top = 423.0
offset_right = 476.0
offset_bottom = 559.0

[node name="RichTextLabel" type="RichTextLabel" parent="UI Control/Frequency"]
modulate = Color(0.87451, 0, 0.784314, 1)
layout_mode = 0
offset_left = -36.0
offset_top = 137.0
offset_right = 51.0
offset_bottom = 163.0
text = "Frequency"

[node name="Amplitude" type="VSlider" parent="UI Control"]
layout_mode = 0
offset_left = 573.0
offset_top = 422.0
offset_right = 589.0
offset_bottom = 558.0

[node name="RichTextLabel2" type="RichTextLabel" parent="UI Control/Amplitude"]
modulate = Color(0.87451, 0, 0.784314, 1)
layout_mode = 0
offset_left = -35.0
offset_top = 139.0
offset_right = 52.0
offset_bottom = 165.0
text = "Amplitude"

[node name="Duration" type="VSlider" parent="UI Control"]
layout_mode = 0
offset_left = 685.0
offset_top = 422.0
offset_right = 701.0
offset_bottom = 558.0

[node name="RichTextLabel3" type="RichTextLabel" parent="UI Control/Duration"]
modulate = Color(0.87451, 0, 0.784314, 1)
layout_mode = 0
offset_left = -30.0
offset_top = 138.0
offset_right = 57.0
offset_bottom = 164.0
text = "Duration"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI Control"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_ip26k")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="AudioBuses" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.191
anchor_top = 0.539
anchor_right = 0.822
anchor_bottom = 1.0
offset_left = 33.968
offset_top = 2.72797
offset_right = 34.056
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="AudioBuses"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.5
offset_top = -122.5
offset_right = 64.5
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AudioBuses/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="AudioBuses/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="AudioBuses/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="AudioBuses/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX Label" type="Label" parent="AudioBuses/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFX Slider" type="HSlider" parent="AudioBuses/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button4" to="." method="_on_button_4_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button5" to="." method="_on_button_5_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button6" to="." method="_on_button_6_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer/Button7" to="." method="_on_button_7_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button8" to="." method="_on_button_8_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button9" to="." method="_on_button_9_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button10" to="." method="_on_button_10_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button11" to="." method="_on_button_11_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button12" to="." method="_on_button_12_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button13" to="." method="_on_button_13_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button14" to="." method="_on_button_14_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/BoxContainer2/Button15" to="." method="_on_button_15_mouse_entered"]
[connection signal="pressed" from="PlayBackControl/RecordButton" to="PlayBackControl" method="_on_record_button_pressed"]
[connection signal="pressed" from="PlayBackControl/PlayButton" to="PlayBackControl" method="_on_play_button_pressed"]
[connection signal="value_changed" from="AudioBuses/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="AudioBuses/MarginContainer/VBoxContainer/GridContainer/SFX Slider" to="." method="_on_sfx_slider_value_changed"]
